<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2021 Picovoice Inc.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/startGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/endGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.03"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottomGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.97"/>

    <TextView
        android:id="@+id/keyword_spinner_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/keyword_label"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintTop_toTopOf="@id/topGuideline"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintEnd_toEndOf="@id/endGuideline"
        app:layout_constraintHorizontal_bias="0"/>

    <Spinner
        android:id="@+id/keyword_spinner"
        style="@android:style/Widget.Holo.Light.Spinner"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:entries="@array/keywords"
        android:spinnerMode="dialog"
        app:layout_constraintTop_toBottomOf="@+id/keyword_spinner_label"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintEnd_toEndOf="@id/endGuideline"/>

    <TextView
        android:id="@+id/stateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/state_label"
        android:layout_marginTop="10dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintTop_toBottomOf="@id/keyword_spinner"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintEnd_toEndOf="@id/endGuideline"
        app:layout_constraintHorizontal_bias="0"/>

    <TextView
        android:id="@+id/stateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toTopOf="@id/stateLabel"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintEnd_toEndOf="@id/endGuideline"/>

    <ScrollView
        android:id="@+id/intentWrapper"
        android:layout_width="0sp"
        android:layout_height="0sp"
        android:layout_marginTop="30dp"
        android:background="@color/colorBackground"
        app:layout_constraintTop_toBottomOf="@+id/stateText"
        app:layout_constraintBottom_toTopOf="@id/clearButton"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintEnd_toEndOf="@id/endGuideline"
        app:layout_constraintHorizontal_bias="0.5" >

        <TextView
            android:id="@+id/intentView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textColor="@android:color/white"
            android:textSize="18sp"/>

    </ScrollView>

    <Button
        android:id="@+id/clearButton"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:text="@string/clear_text"
        android:layout_marginBottom="30dp"
        android:background="@android:color/holo_red_dark"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:onClick="clearText"
        app:layout_constraintTop_toBottomOf="@+id/intentWrapper"
        app:layout_constraintBottom_toTopOf="@id/record_button"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintEnd_toEndOf="@id/endGuideline"
        app:layout_constraintHorizontal_bias="0.5" />

    <ToggleButton
        android:id="@+id/record_button"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/button_background"
        android:textColor="@android:color/white"
        android:textOff="@string/start"
        android:textOn="@string/stop"
        android:onClick="process"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/bottomGuideline"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintEnd_toEndOf="@id/endGuideline"
        app:layout_constraintHorizontal_bias="0.5"/>

</androidx.constraintlayout.widget.ConstraintLayout>
